test/classes/bradc/generic/genericInGeneric.good
genericInGeneric.chpl:14: error: unresolved call 'D()'
genericInGeneric.chpl:14: note:   instantiated from 'E(type t3, x)'
genericInGeneric.chpl:5: note: candidates are: D(type t2, x)
